# AWS-AI-chatbot

./: .gitignore  CHANGELOG.md  CHECKLIST.md  CLEANUP_GUIDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile.summary  NEXT_STEPS.md  PROJECT_INFO.md  QUICKSTART.md  QUICK_FIX.txt  README.md  README_CURRENT_STATUS.md  RELEASE_NOTES_0.11.0.md  STRUCTURE.md  debug_app.py  generate_session_summary.py  get_new_api_key.py  package-lock.json  package.json  pyproject.toml  session-summary.sh  streamlit_chatbot.py  test_bedrock.py
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
.session-history/: .gitignore  INDEX.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY_TEMPLATE.md  STATISTICS.md  SUMMARY_20260528_233931.md  SUMMARY_latest.md  USAGE_GUIDE.md  config.json  search.py
chatbot-web/: app.py  requirements.txt
config/: .env.example  requirements.txt
docs/: AUTONOMOUS_DELIVERY_ARCHITECTURE.md  CREDENTIALS_GUIDE.md  FILES_OVERVIEW.md  FINAL_SUMMARY.md  HOW_TO_USE.md  HUONG_DAN_AWS.md  INDEX.md  PHASE_2_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_START_WINDOWS.md  README.md  RENEW_API_KEY.md  SAFEGRAPH_MVP_PLAN.md  START_HERE.md  SUMMARY.txt  build guide.md  safegraph-ai-evaluation-report.html
examples/: example_usage.py  streamlit_app.py
safegraph-ai-vscode/: .vscodeignore  AUTONOMOUS_DELIVERY_INDEX.md  AUTONOMOUS_DELIVERY_ROADMAP.md  AUTONOMOUS_DELIVERY_SUMMARY.md  CHANGELOG_0.8.2.md  CHANGELOG_0.8.3.md  FDE_ROADMAP.md  HISTORY_IMPLEMENTATION_SUMMARY.md  HISTORY_INTEGRATION_GUIDE.md  HISTORY_SYSTEM.md  IMPLEMENTATION_TRACKER.md  INSTALL.md  INSTALLATION_v0.8.2.md  LICENSE  PHASE_2_QUICK_START.md  QUICK_START_v0.8.2.md  QUICK_START_v0.8.3.md  README.md  RELEASE_NOTES_0.17.0.md  V0.16.0_DESIGN.md  jest.config.js  package-lock.json  package.json  tsconfig.json  v0.8.2_CHANGES_SUMMARY.md  v0.8.2_DEPLOYMENT_COMPLETE.md  v0.8.3_CHANGES_SUMMARY.md
scripts/: bump-version.js  package-vsix.js
src/: app.html  app.py  setup_credentials.py
(+122 files in other folders)
